crates/gdsr/src/snapshots/gdsr__cell__tests__cell_get_elements-2.snap
---
source: crates/gdsr/src/cell.rs
expression: moved_elements
---
[
    Polygon(
        Polygon {
            points: [],
            layer: Layer(
                0,
            ),
            data_type: DataType(
                0,
            ),
            properties: [],
        },
    ),
    Polygon(
        Polygon {
            points: [],
            layer: Layer(
                0,
            ),
            data_type: DataType(
                0,
            ),
            properties: [],
        },
    ),
    Path(
        Path {
            points: [],
            layer: Layer(
                0,
            ),
            data_type: DataType(
                0,
            ),
            type: None,
            width: None,
            begin_extension: None,
            end_extension: None,
            properties: [],
        },
    ),
    Text(
        Text {
            value: "",
            origin: Point {
                x: Integer(
                    IntegerUnit {
                        value: 5,
                        units: 1e-9,
                    },
                ),
                y: Integer(
                    IntegerUnit {
                        value: 5,
                        units: 1e-9,
                    },
                ),
            },
            layer: Layer(
                0,
            ),
            datatype: DataType(
                0,
            ),
            magnification: 1.0,
            angle: Radians(
                0.0,
            ),
            x_reflection: false,
            vertical_presentation: Middle,
            horizontal_presentation: Centre,
            properties: [],
        },
    ),
]
