crates/gdsr/src/snapshots/gdsr__cell__tests__cell_get_elements.snap
---
source: crates/gdsr/src/cell.rs
expression: elements
---
[
    Polygon(
        Polygon {
            points: [],
            layer: Layer(
                0,
            ),
            data_type: DataType(
                0,
            ),
        },
    ),
    Polygon(
        Polygon {
            points: [],
            layer: Layer(
                0,
            ),
            data_type: DataType(
                0,
            ),
        },
    ),
    Path(
        Path {
            points: [],
            layer: Layer(
                0,
            ),
            data_type: DataType(
                0,
            ),
            type: None,
            width: None,
            begin_extension: None,
            end_extension: None,
        },
    ),
    Text(
        Text {
            value: "",
            origin: Point {
                x: Integer(
                    IntegerUnit {
                        value: 0,
                        units: 1e-9,
                    },
                ),
                y: Integer(
                    IntegerUnit {
                        value: 0,
                        units: 1e-9,
                    },
                ),
            },
            layer: Layer(
                0,
            ),
            datatype: DataType(
                0,
            ),
            magnification: 1.0,
            angle: Radians(
                0.0,
            ),
            x_reflection: false,
            vertical_presentation: Middle,
            horizontal_presentation: Centre,
        },
    ),
]
